--- a/css/factory.css
+++ b/css/factory.css
@@ -25,7 +25,7 @@ span {
     font-family: 'Raleway', 'Arial', sans-serif;
     color: var(--text);
     /* width: 100%; */
-    margin-right: 20px;
+    /* margin-right: 20px; */
     font-size: 14px;
     font-style: italic;
 }
@@ -51,7 +51,7 @@ pre {
     /* margin-bottom: 10px; */
 }
 
-button {
+button, select {
     margin: 2px;
     font-family: 'Raleway', 'Arial', sans-serif;
     background: transparent;
@@ -72,11 +72,16 @@ button {
     z-index: 0;
 }
 
-button:hover {
+button:hover, select:hover {
     color: var(--text-dark);
 }
 
-button::before {
+select:hover {
+    background-color: var(--primary);
+    transition: 0.2s all;
+}
+
+button::before, select::before {
     background-color: var(--primary);
     width: 0;
     height: 100%;
@@ -91,7 +96,7 @@ button::before {
     z-index: -1;
 }
 
-button:hover::before {
+button:hover::before, select:hover::before {
     width: 100%;
     left: 0;
     right: 0;
@@ -124,7 +129,7 @@ button:hover::before {
     margin-bottom: 10px;
 }
 
-.container#recipe-container {
+.container#card-container {
     overflow-y: scroll;
     height: 100%;
     margin: 0;
@@ -132,7 +137,7 @@ button:hover::before {
     border-bottom: 1px solid var(--border-transparent)
 }
 
-.recipe {
+.card {
     border: 1px solid var(--border);
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.5) 0px -2px 10px;
@@ -147,11 +152,11 @@ button:hover::before {
     overflow: hidden;
 }
 
-.recipe:hover {
+.card:hover {
     transform: scale(1.02);
 }
 
-.recipe img {
+.card img {
     /* width: 32px; */
     /* height: 32px; */
     min-width: 10%;
@@ -162,7 +167,7 @@ button:hover::before {
     /* box-shadow: var(--shadow); */
 }
 
-.recipe h3 {
+.card h3 {
     flex-basis: 75%;
     text-align: left;
     margin: 0;
@@ -175,12 +180,12 @@ button:hover::before {
     display: flex;
 }
 
-.recipe div {
+.card div {
     flex-basis: 100%;
 }
 
-.recipe .link-container {
-    /* display: flex; */
+.card .link-container {
+    display: flex;
     /* flex-direction: row; */
     /* flex-wrap: wrap; */
     background: black;
@@ -188,19 +193,19 @@ button:hover::before {
     text-align: left;
 }
 
-.recipe button {
+.card button {
     margin: 10px;
     margin-top: 5px;
     color: white;
     border-color: white;
 }
 
-.recipe button.link:hover {
+.card button.link:hover {
     text-decoration: none!important;
     color: black;
 }
 
-.recipe button::before {
+.card button::before {
     background-color: white;
 }
 
@@ -213,4 +218,70 @@ h1 {
     height: var(--header-height);
     margin: 0;
     color: var(--text);
+}
+
+.dirTable {
+    border: 1px solid var(--border);
+}
+
+.dirTable h5 {
+    color: var(--text);
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    margin: 0;
+    border-bottom: 1px solid var(--border);
+    text-decoration: underline;
+}
+
+.dirTable span {
+    width: 100%;
+    display: block;
+    font-size: 12px;
+    padding: 5px;
+    color: var(--text);
+}
+
+.dirTable span:hover {
+    text-decoration: underline;
+}
+
+span.fakenode {
+    background-color: lightgrey;
+    border: white;
+    color: black;
+    font-size: 10px;
+    width: 50px;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-weight: bold;
+    flex-wrap: wrap;
+    padding: 10px;
+    border-radius: 8px;
+    border: 3px solid;
+    box-shadow: rgba(0, 0, 0, 0.75) 2px 2px 10px;
+}
+
+span.nodeArrow {
+    font-size: 15px;
+    width: 20px;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    padding: 0;
+    font-weight: bold;
+}
+
+div#path-display {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border-top: 1px solid var(--border);
+    margin-top: 10px;
+    margin-bottom: 5px;
+    align-items: center;
 }
